--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/header": "^2.6.1",
+    "@editorjs/list": "^1.6.2",
     "autoprefixer": "^9",
     "postcss": "^7",
     "sirv-cli": "^1.0.0",
     "smelte": "^1.1.8",
+    "svelte-simple-modal": "^1.0.3",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
